--- a/NFCRWDemo/app/src/main/res/layout/activity_read_nfc.xml
+++ b/NFCRWDemo/app/src/main/res/layout/activity_read_nfc.xml
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="默认读取Ndef格式的标签,请先选择格式" />
+            android:text="默认读取Ndef格式的标签" />
 
         <TextView
             android:id="@+id/geshi"
@@ -40,7 +40,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-
 
 
         <LinearLayout
@@ -72,86 +71,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="内容：" />
+                android:text="NFC数据：" />
 
             <TextView
                 android:id="@+id/content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-
-        <RadioGroup
-            android:id="@+id/radio_group"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-
-            <RadioButton
-                android:id="@+id/radio_btn_0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="IsoDep" />
-
-            <RadioButton
-                android:id="@+id/radio_btn_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="NfcA" />
-
-            <RadioButton
-                android:id="@+id/radio_btn_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="NfcB" />
-
-            <RadioButton
-                android:id="@+id/radio_btn_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="NfcF" />
-
-            <RadioButton
-                android:id="@+id/radio_btn_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="NfcV" />
-
-            <RadioButton
-                android:id="@+id/radio_btn_5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:checked="true"
-                android:text="Ndef    (支持)" />
-
-            <RadioButton
-                android:id="@+id/radio_btn_6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="NdefFormatable" />
-
-            <RadioButton
-                android:id="@+id/radio_btn_7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="MifareUltralight    (支持)" />
-
-            <RadioButton
-                android:id="@+id/radio_btn_8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="MifareClassic" />
-
-        </RadioGroup>
 
     </LinearLayout>
 
